--- a/Comp_Network_projects/project-3-cpp/proxy_http/makefile
+++ b/Comp_Network_projects/project-3-cpp/proxy_http/makefile
@@ -1,15 +1,14 @@
-a.out : proxy_http.cpp proxy_http.h ../common/CommandHandler.cpp ../common/CommandHandler.h
-	g++ proxy_http.cpp ../common/CommandHandler.cpp -o a.out
+proxy_http.out : proxy_http.cpp proxy_http.h ../common/CommandHandler.cpp ../common/CommandHandler.h
+	g++ proxy_http.cpp ../common/CommandHandler.cpp -o proxy_http.out
 
 debug: proxy_http.cpp proxy_http.h ../common/CommandHandler.cpp ../common/CommandHandler.h
-	g++ -g -DDEBUG proxy_http.cpp ../common/CommandHandler.cpp -o a.out
+	g++ -g -DDEBUG proxy_http.cpp ../common/CommandHandler.cpp -o proxy_http.out
 
-run: a.out
-	./a.out
+run: proxy_http.out
+	./proxy_http.out
 
 run-debug: debug
-	./a.out
+	./proxy_http.out
 
 clean:
-	rm a.out
-	rm *.o
+	rm proxy_http.out
